# QuickBackup

./: CMakeLists.txt  README.md
src/: main.c
